syntax = "proto3";

option java_package = "pl.mati.blu.serialization";
option java_multiple_files = true;

import "manual.proto";
import "main_host.proto";
import "main_node.proto";
import "main_shared.proto";

message MainHostMsg {
    oneof content {
        SetLed set_led = 1;
        GetReading get_reading = 2;
        SensorOptions set_sensor_options = 3;
        AutoOptions  set_auto_options = 4;
        SubscribeReading subscribe_reading = 5;
    }
}


message MainNodeMsg {
    bool is_subscription_response = 1;
    oneof content {
        ReadingResponse reading_response = 2;
    }
    
}